Version 1.13.11+dev:
 * User Interface:
   * Improved outro screen.
   * Fixed a few cases of data not displaying in the MP Join Game screen.
   * Fixed required addon names not displaying properly when joining an
     MP game.
 * WML engine:
   * Fixed units shown with [move_units_fake] disappearing between steps
     (bug #1516).
 * Miscellaneous and bug fixes:
   * Fixed standing animation toggle not taking immediate effect (bug
     #1653).
   * Fixed error when de-assigning village with [capture_village].
   * Enabled the use of Open Type Font (.otf) fonts.
   * Fresh installs of the game will now open in fullscreen by default.

Version 1.13.11:
 * Add-ons client:
   * Added an order dropdown that allows you to sort add-ons by the time of
     latest update or original upload (issue #1747)
   * Players will now be prompted to update outdated dependencies alongside
     downloading missing ones when installing an add-on.
 * Add-ons server:
   * Empty passphrases from malfunctioning clients that do not provide or
     generate a passphrase otherwise are now rejected instead of treated as
     valid.
 * Campaigns:
   * The Cutscene_Minimal theme is now used in all dialog-only scenarios that
     have `linger=no` in [end_level].
   * An Orcish Incursion:
     * New story art.
   * A Tale of Two Brothers:
     * Added a full set of hints on easy difficulty.
   * Delfador's Memoirs:
     * Iliah-Malal can now be killed by either undead or Delfador in S19
     * S19 has been rebalanced to increase difficulty and allow player & enemy
       to field more units.
   * Descent into Darkness:
     * 'Endless Night' now has accurate & improved scenario objectives. It also
       has received improvements in dialog, map appearance, and difficulty.
     * S08/S09 A Small Favor 2/3 - Fixed bug preventing door operation/usage.
     * Fixed and improved appearance and handling of the wose.
     * Other minor fixes and improvements.
 * Packaging